Various upgrades and convenience changes:
- Can send and reply to tells.
- Can support multiple channels. Example config updated to demonstrate this functionality.
- Can list all players currently in a given channel.
- Should more accurately determine if a connection has been successfully established.
- Disabled analysis and similar code, resulting in cleaner console output.
- Tweaked Discord and SWG output to be used by a single individual in a private server.

--- a/config.example.json
+++ b/config.example.json
@@ -4,8 +4,13 @@
         "LoginPort": 44453,
         "Username": "SWGAccount",
         "Password": "SWGPassword",
+    },
+    "Params": {
         "Character": "Discord",
-        "ChatRoom": "Genchat"
+        "ChatRooms": [
+		"GalaxyChat",
+		"Chat.RP"
+	]
     },
     "Discord": {
         "BotName": "RoC-Bot",
