--- a/config.example.json
+++ b/config.example.json
@@ -13,6 +13,7 @@
 	]
     },
     "Discord": {
+	"BotNickname": "RoC-Bot",
         "BotName": "RoC-Bot",
         "BotToken": "<Bot-token-from-discordapp.com/developers>",
         "ServerName": "SWG Awesomeness",
